--- a/templates/main/sobre.html
+++ b/templates/main/sobre.html
@@ -17,145 +17,97 @@ Clipgen.ai{% endblock %} {% block content %}
     >
   </section>
   <!-- HERO SECTION -->
-  <!-- CARRUSEL PHOTOS SECTION -->
+  <!-- CARRUSEL videos SECTION -->
   <section class="carrusel-section">
     <h3 id="title-carrusel">
       Crea <strong>videos</strong> <strong>sorprendentes</strong>
     </h3>
     <div id="carrusel-track">
-      <div class="carrusel-container animate__animated">
-        <div class="carrusel-img simple-one">
-          <img
-            src="{% static 'img/carrusel/ej1.jpg' %}"
-            alt="Carrusel photo"
-            loading="lazy"
-          />
-        </div>
-        <div class="carrusel-img simple-two">
-          <img
-            src="{% static 'img/carrusel/ej2.jpg' %}"
-            alt="Carrusel photo"
-            loading="lazy"
-          />
-        </div>
-        <div class="carrusel-img double">
-          <img
-            src="{% static 'img/carrusel/ej4-100.jpg' %}"
-            alt="Carrusel photo"
-            loading="lazy"
-          />
-        </div>
-        <div class="carrusel-img simple-three">
-          <img
-            src="{% static 'img/carrusel/ej3.jpg' %}"
-            alt="Carrusel photo"
-            loading="lazy"
-          />
-        </div>
-        <div class="carrusel-img simple-four">
-          <img
-            src="{% static 'img/carrusel/ej6-100.jpg' %}"
-            alt="Carrusel photo"
-            loading="lazy"
-          />
-        </div>
-        <div class="carrusel-img double-two">
-          <img
-            src="{% static 'img/carrusel/ej5.jpg' %}"
-            alt="Carrusel photo"
-            loading="lazy"
-          />
-        </div>
+      <div class="carrusel-container">
+        <iframe
+        class="simple-one"
+          width="560"
+          height="315"
+          src="https://www.youtube.com/embed/7J9q0DERCYE"
+          title="YouTube video player"
+          frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+          allowfullscreen
+        ></iframe>
+        <video class="video simple-two" muted>
+          <source src="video2.mp4" type="video/mp4" />
+          Tu navegador no soporta el video.
+        </video>
+        <video class="video double" muted>
+          <source src="video3.mp4" type="video/mp4" />
+          Tu navegador no soporta el video.
+        </video>
+        <video class="video simple-three" muted>
+          <source src="video1.mp4" type="video/mp4" />
+          Tu navegador no soporta el video.
+        </video>
+        <video class="video double-two" muted>
+          <source src="video2.mp4" type="video/mp4" />
+          Tu navegador no soporta el video.
+        </video>
+        <video class="video simple-four" muted>
+          <source src="video3.mp4" type="video/mp4" />
+          Tu navegador no soporta el video.
+        </video>
       </div>
 
-      <div class="carrusel-container animate__animated">
-        <div class="carrusel-img simple-one">
-          <img
-            src="{% static 'img/carrusel/ej1.jpg' %}"
-            alt="Carrusel photo"
-            loading="lazy"
-          />
-        </div>
-        <div class="carrusel-img simple-two">
-          <img
-            src="{% static 'img/carrusel/ej2.jpg' %}"
-            alt="Carrusel photo"
-            loading="lazy"
-          />
-        </div>
-        <div class="carrusel-img double">
-          <img
-            src="{% static 'img/carrusel/ej4-100.jpg' %}"
-            alt="Carrusel photo"
-            loading="lazy"
-          />
-        </div>
-        <div class="carrusel-img simple-three">
-          <img
-            src="{% static 'img/carrusel/ej3.jpg' %}"
-            alt="Carrusel photo"
-            loading="lazy"
-          />
-        </div>
-        <div class="carrusel-img simple-four">
-          <img
-            src="{% static 'img/carrusel/ej6-100.jpg' %}"
-            alt="Carrusel photo"
-            loading="lazy"
-          />
-        </div>
-        <div class="carrusel-img double-two">
-          <img
-            src="{% static 'img/carrusel/ej5.jpg' %}"
-            alt="Carrusel photo"
-            loading="lazy"
-          />
-        </div>
+      <div class="carrusel-container">
+        <video class="video" muted>
+          <source src="video1.mp4" type="video/mp4" />
+          Tu navegador no soporta el video.
+        </video>
+        <video class="video" muted>
+          <source src="video2.mp4" type="video/mp4" />
+          Tu navegador no soporta el video.
+        </video>
+        <video class="video" muted>
+          <source src="video3.mp4" type="video/mp4" />
+          Tu navegador no soporta el video.
+        </video>
+        <video class="video" muted>
+          <source src="video1.mp4" type="video/mp4" />
+          Tu navegador no soporta el video.
+        </video>
+        <video class="video" muted>
+          <source src="video2.mp4" type="video/mp4" />
+          Tu navegador no soporta el video.
+        </video>
+        <video class="video" muted>
+          <source src="video3.mp4" type="video/mp4" />
+          Tu navegador no soporta el video.
+        </video>
       </div>
 
-      <div class="carrusel-container animate__animated">
-        <div class="carrusel-img simple-one">
-          <img
-            src="{% static 'img/carrusel/ej1.jpg' %}"
-            alt="Carrusel photo"
-            loading="lazy"
-          />
-        </div>
-        <div class="carrusel-img simple-two">
-          <img
-            src="{% static 'img/carrusel/ej2.jpg' %}"
-            alt="Carrusel photo"
-            loading="lazy"
-          />
-        </div>
-        <div class="carrusel-img double">
-          <img
-            src="{% static 'img/carrusel/ej4-100.jpg' %}"
-            alt="Carrusel photo"
-            loading="lazy"
-          />
-        </div>
-        <div class="carrusel-img simple-three">
-          <img
-            src="{% static 'img/carrusel/ej3.jpg' %}"
-            alt="Carrusel photo"
-            loading="lazy"
-          />
-        </div>
-        <div class="carrusel-img simple-four">
-          <img
-            src="{% static 'img/carrusel/ej6-100.jpg' %}"
-            alt="Carrusel photo"
-            loading="lazy"
-          />
-        </div>
-        <div class="carrusel-img double-two">
-          <img
-            src="{% static 'img/carrusel/ej5.jpg' %}"
-            alt="Carrusel photo"
-            loading="lazy"
-          />
-        </div>
+      <div class="carrusel-container">
+        <video class="video" muted>
+          <source src="video1.mp4" type="video/mp4" />
+          Tu navegador no soporta el video.
+        </video>
+        <video class="video" muted>
+          <source src="video2.mp4" type="video/mp4" />
+          Tu navegador no soporta el video.
+        </video>
+        <video class="video" muted>
+          <source src="video3.mp4" type="video/mp4" />
+          Tu navegador no soporta el video.
+        </video>
+        <video class="video" muted>
+          <source src="video1.mp4" type="video/mp4" />
+          Tu navegador no soporta el video.
+        </video>
+        <video class="video" muted>
+          <source src="video2.mp4" type="video/mp4" />
+          Tu navegador no soporta el video.
+        </video>
+        <video class="video" muted>
+          <source src="video3.mp4" type="video/mp4" />
+          Tu navegador no soporta el video.
+        </video>
       </div>
     </div>
     <div class="carrusel-buttons-container">
@@ -167,11 +119,11 @@ Clipgen.ai{% endblock %} {% block content %}
       ></span>
     </div>
   </section>
-  <!-- CARRUSEL PHOTOS SECTION -->
+  <!-- CARRUSEL videos SECTION -->
   <!-- BENEFITS SECTION -->
   <section id="benefits" class="benefits">
     <div class="cards-benefits-container">
-      <div class="card-benefit animate__animated">
+      <div class="card-benefit card-benefit-area1 animate__animated">
         <h3>Personalización</h3>
         <img
           width="96"
@@ -217,8 +169,8 @@ Clipgen.ai{% endblock %} {% block content %}
           />
         </div>
       </div>
-      <div class="card-benefit animate__animated">
-        <h3>Escalabilidad</h3>
+      <div class="card-benefit card-benefit-area2 animate__animated">
+        <h3>Velocidad</h3>
         <img
           width="96"
           height="96"
@@ -259,7 +211,7 @@ Clipgen.ai{% endblock %} {% block content %}
           />
         </div>
       </div>
-      <div class="card-benefit animate__animated">
+      <div class="card-benefit card-benefit-area3 animate__animated">
         <h3>Escalabilidad</h3>
         <img
           width="96"
