--- a/static/main/css/Navbar/navbar.css
+++ b/static/main/css/Navbar/navbar.css
@@ -5,7 +5,7 @@ nav {
   position: fixed;
   backdrop-filter: blur(25px) saturate(180%);
   -webkit-backdrop-filter: blur(25px) saturate(180%);
-  background-color: rgba(2, 2, 2, 0);
+  background-color: rgba(0, 0, 0, 0);
   top: 0;
   display: flex;
   justify-content: space-between;
@@ -27,13 +27,14 @@ nav {
     color: var(--greenFull3);
     font-size: 28px;
     font-weight: bolder;
+    filter: drop-shadow(2px 4px 6px black);
   }
 }
 
 .nav-links {
   display: flex;
   margin-right: 25px;
-  gap: 10px;
+  gap: 15px;
   padding-bottom: 4px;
 }
 
@@ -44,37 +45,27 @@ nav {
   font-weight: bold;
   padding: 5px 10px;
   border-radius: 25px;
+  position: relative;
 }
 
-.nav-links > a:hover {
+.nav-links > a:hover,
+.nav-links > span:hover {
   color: var(--greenFull2);
 }
 
+.nav-links > a,
 .nav-links > span {
   color: white;
   font-family: var(--main);
   font-weight: bold;
+  font-size: 0.8rem;
   padding: 5px 10px;
   border-radius: 4px;
   cursor: pointer;
 }
 
 .nav-links > span:nth-child(1) {
-  border: 1px solid grey;
-}
-
-.nav-links > span:nth-child(1):hover {
-  border: 1px solid transparent;
-  background-color: grey;
-  color: black;
-}
-
-.nav-links > span:nth-child(2) {
-  color: white;
-}
-
-.nav-links > span:nth-child(2):hover {
-  color: var(--greenFull3);
+  border: 1px solid var(--panel2);
 }
 
 /* MENU MOBILE */
@@ -83,7 +74,7 @@ nav {
   flex-direction: column;
   position: fixed;
   transition: 1s all;
-  top: 55px;
+  top: 61px;
   right: 0;
   z-index: 2002;
   background-color: var(--blackPanel);
@@ -106,6 +97,12 @@ nav {
 #btn-menu-mobile {
   display: none;
   padding: 1rem;
+  transition: 0.4s all;
+}
+
+#btn-menu-mobile:hover {
+  color: var(--greenFull2);
+  transform: scale(1.1);
 }
 
 #nav-mobile > div {
@@ -124,6 +121,10 @@ nav {
   width: 230px;
   gap: 20px;
   font-family: var(--third);
+}
+
+#nav-mobile > div > div:hover {
+  color: var(--greenFull3);
 }
 /* NAVBAR */
 
