--- a/static/main/css/styles.css
+++ b/static/main/css/styles.css
@@ -43,6 +43,11 @@
   * {
     border: 1px solid gold;
   } */
+  ´ select {
+    appearance: none;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+  }
 }
 
 ::-webkit-scrollbar {
@@ -97,174 +102,64 @@ body {
   background-color: #c82333;
 }
 
-/*pantalla de carga*/
-.center-body {
-  display: none; /* Hidden by default */
-  justify-content: center;
-  align-items: center;
-  width: 100%;
-  height: 100%;
-  position: fixed;
-  top: 0;
-  left: 0;
-  background: rgba(0, 0, 0, 0.8);
-  z-index: 9999;
-}
-.loader-circle-9 {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  width: 90px;
-  height: 90px;
-  background: transparent;
-  border: 3px solid #3c3c3c;
-  border-radius: 50%;
-  text-align: center;
-  line-height: 90px;
-  font-family: sans-serif;
-  font-size: 12px;
-  color: #00eaff;
-  text-transform: uppercase;
-  box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
-}
-.loader-circle-9:before {
-  content: "";
-  position: absolute;
-  top: 0px;
-  left: 0px;
-  width: 100%;
-  height: 100%;
-  border: 3px solid transparent;
-  border-top: 3px solid #0db823;
-  border-right: 3px solid #0db823;
-  border-radius: 50%;
-  animation: animateC 2s linear infinite;
-}
-.loader-circle-9 span {
-  display: block;
-  position: absolute;
-  top: calc(50% - 2px);
-  left: 50%;
-  width: 50%;
-  height: 4px;
-  background: transparent;
-  transform-origin: left;
-  animation: animate 2s linear infinite;
-}
-.loader-circle-9 span:before {
-  content: "";
-  position: absolute;
-  width: 16px;
-  height: 16px;
-  border-radius: 50%;
-  background: #0db823;
-  top: -6px;
-  right: -8px;
-  box-shadow: 0 0 20px #0db823;
-}
-
-@keyframes animateC {
-  0% {
-    transform: rotate(0deg);
-  }
-  100% {
-    transform: rotate(360deg);
-  }
-}
-@keyframes animate {
-  0% {
-    transform: rotate(45deg);
-  }
-  100% {
-    transform: rotate(405deg);
-  }
-}
-
-/*alerta*/
-.alert {
-  display: none;
-}
-
-.alert.show {
-  display: block;
-}
-
-.suggestion-item {
-  background-color: #343a40;
-  color: #ffffff;
-  padding: 5px;
-  margin-top: 5px;
-  border-radius: 4px;
-  cursor: pointer;
-}
-
-/* Sugerencia cuando se pasa el cursor */
-.suggestion-item:hover {
-  border: 2px solid;
-  border-image: linear-gradient(45deg, #87f414, #0a6207, #0b340f, #07141a) 1;
-  color: #ffffff;
-}
-
 /* Estilos para el chatbot */
+
+#titleSuggestions {
+  padding: 1rem;
+}
+
+#title-suggestion-container {
+  font-family: var(--main);
+  font-weight: bold;
+  font-size: 1.5rem;
+  color: var(--greenFull3);
+  text-align: left;
+  padding-bottom: 1.5rem;
+  position: relative;
+}
+
+#title-suggestion-container > i {
+  position: absolute;
+  left: -30px;
+  top: 2px;
+  filter: drop-shadow(2px 4px 6px black);
+}
 
 .suggestion-item {
   cursor: pointer;
   padding: 5px;
   border: 2px solid transparent;
-  border-radius: 5px;
+  border-radius: 3px;
   margin-top: 5px;
-  background-color: #0e1211;
+  background-color: var(--blueBtns);
   color: #ffffff;
   transition: border 0.5s;
+  position: relative;
+  padding: 0.6rem;
+  font-family: var(--main);
+  font-weight: 300;
 }
 
 .suggestion-item:hover {
-  border: 2px solid;
-  border-image: linear-gradient(45deg, #87f414, #0a6207, #0b340f, #07141a) 1;
-  background-color: #07141a;
+  /* border-image: linear-gradient(
+      45deg,
+      var(--greenFull1),
+      var(--greenFull2),
+      var(--greenFull3),
+      var(--inputs)
+    )
+    1; */
+  background-color: var(--greenFull3);
 }
 
-/* Animación del borde */
-@keyframes borderAnimation {
-  0% {
-    border-image-source: linear-gradient(
-      45deg,
-      #87f414,
-      #0a6207,
-      #0b340f,
-      #07141a
-    );
-  }
-  50% {
-    border-image-source: linear-gradient(
-      135deg,
-      #07141a,
-      #0b340f,
-      #0a6207,
-      #87f414
-    );
-  }
-  100% {
-    border-image-source: linear-gradient(
-      45deg,
-      #87f414,
-      #0a6207,
-      #0b340f,
-      #07141a
-    );
-  }
+.suggestion-item > i {
+  position: absolute;
+  top: 10px;
+  right: 5px;
 }
 
 /* mensaje de usuario o contraseña incorrecta*/
-.alert {
-  padding: 15px;
-  margin-bottom: 20px;
-  border: 1px solid transparent;
-  border-radius: 4px;
-}
 
-/*botones de ejecucion*/
 
 .d-grid {
   display: flex;
@@ -536,11 +431,6 @@ button:hover #clip {
   } */
 }
 
-.plan-item:hover {
-  transform: scale(1.013);
-  box-shadow: 1px 1px 10px 2px var(--greenFull2);
-}
-
 #plan-item-feature {
   margin-top: 60px;
 }
@@ -697,76 +587,6 @@ button:hover #clip {
   }
 }
 
-/* Mensajes de alerta centrados */
-/* Mensajes de alerta centrados y personalizados */
-.alert-center {
-  position: fixed;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  z-index: 1050;
-  display: block;
-  padding: 35px;
-  border-radius: 6px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-  text-align: center;
-  width: 80%;
-  max-width: 300px;
-  font-size: 1.3rem;
-  font-family: "Kanit";
-  opacity: 0;
-}
-
-.alert-danger {
-  color: #ffffff;
-  border: 5px solid red;
-  backdrop-filter: blur(16px) saturate(180%);
-  -webkit-backdrop-filter: blur(16px) saturate(180%);
-  background-color: rgba(158, 10, 10, 0.38);
-}
-
-.alert-success {
-  color: #ffffff;
-  border: 5px solid var(--greenFull3);
-  backdrop-filter: blur(16px) saturate(180%);
-  -webkit-backdrop-filter: blur(16px) saturate(180%);
-  background-color: rgb(10 158 17 / 38%);
-}
-
-.alert {
-  animation: fadeIn 0.5s forwards, fadeOut 0.5s forwards 2.5s;
-  /* Aparecer y desaparecer */
-}
-
-@keyframes fadeIn {
-  from {
-    opacity: 0;
-  }
-  to {
-    opacity: 1;
-  }
-}
-
-@keyframes fadeOut {
-  from {
-    opacity: 1;
-  }
-  to {
-    opacity: 0;
-  }
-}
-
-/* Animación de desvanecimiento */
-@keyframes fadeIn {
-  from {
-    opacity: 0;
-    transform: translateY(-10px);
-  }
-  to {
-    opacity: 1;
-    transform: translateY(0);
-  }
-}
 
 .tab-pane {
   animation: fadeIn 0.5s ease-in-out;
@@ -1069,4 +889,15 @@ button:hover #clip {
 .video-item > h4 {
   font-size: 18px;
   font-family: var(--third);
+}
+
+@media (max-width: 968px) {
+  .suggestion-item > i {
+    right: -20px;
+  }
+}
+@media (max-width: 668px) {
+  .box-title-content > h3 {
+    padding: 70px 0;
+  }
 }
